--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -13,11 +13,16 @@
         <!--android:gravity="center_vertical"-->
         <!--android:padding="8dp"-->
         <!--style="@style/Base.TextAppearance.AppCompat.Body2"/>-->
+    <!--<HorizontalScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:scrollbars="none">-->
     <ImageView
         android:id="@+id/itemImageView"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="350dp"
         android:gravity="center_vertical"
         android:padding="8dp"
         />
+    <!--</HorizontalScrollView>-->
 </android.support.v7.widget.CardView>
