--- a/app/src/main/res/menu/act_show_menu.xml
+++ b/app/src/main/res/menu/act_show_menu.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/collection_img"
         android:title="收藏"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        tools:ignore="HardcodedText" />
     <item android:id="@+id/save_img"
         android:title="保存"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        tools:ignore="HardcodedText" />
 </menu>
